Solved overflow in no results text in builder search component

--- a/app/assets/stylesheets/editor-3/custom-list.css.scss
+++ b/app/assets/stylesheets/editor-3/custom-list.css.scss
@@ -47,6 +47,12 @@
   padding: 16px;
   text-align: center;
 }
+.CustomList-message-text {
+  max-width: 100%;
+  overflow: auto;
+  white-space: normal;
+  word-break: break-word;
+}
 .CustomList-item.is-highlighted,
 .CustomList-item:hover {
   background: rgba($cHighlight, 0.16);
